# xgems

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  README.md  azure-pipelines.yml  bitbucket-pipelines.yml  environment.devenv.yml
.github/workflows/: ci-build.yml
ci/appveyor/: build.bat  install.bat
ci/pipelines/: install.sh  installVS.bat  test.sh
ci/pipelines/install/: install-osx.sh
ci/travis/: install.sh  test.sh
cmake/: xGEMSFindDeps.cmake
demos/: CMakeLists.txt  demo.pro  demo1-dict.cpp  demo1-dict.py  demo1.cpp  demo1.py  demo_reactive_transport.py  gemscalc.py  pyGEMS_test_bounds.py  pyGEMS_test_phase_species.py  pyGEMS_test_properties.py  pyGEMS_test_set.py
demos/resources/: CemHyds-dat.lst  CemHyds-dbr-0-0000.json  CemHyds-dbr.lst  CemHyds-ipm.json  dbr_test.json
demos/resources/CemGEMS-condensed/: CemHyds-dbr-0-0000.json  CemHyds-ipm.json
demos/resources/CemGEMS-formatted/: CemHyds-ipm.json
demos/resources/Export-condensed/: Export-dat.lst  Export-dbr-0-0000.json  Export-dbr.lst  Export-dch.json  Export-ipm.json
demos/resources/Export-formatted/: Export-dbr-0-0000.json  Export-dch.json  Export-ipm.json
demos/resources/GEMSW-from-DB/: GEMSW-dbr-0-0000.json  GEMSW-ipm.json
demos/resources/Kaolinite-condensed/: pHtitrKaS-dat.lst  pHtitrKaS-dbr-0-0000.json  pHtitrKaS-dch.json  pHtitrKaS-ipm.json
demos/resources/Kaolinite-formatted/: pHtitrKaS-dbr-0-0000.json  pHtitrKaS-dbr.lst  pHtitrKaS-dch.json  pHtitrKaS-ipm.json
demos/resources/Test-json-strings/: dch_test.json  ipm_test.json
docs/: requirements.txt
docs/doxygen/xml/: ChemicalEngine_8cpp.xml  ChemicalEngine_8hpp.xml  Eigen_8hpp.xml  Index_8hpp.xml  Interface_8hpp.xml  classxGEMS_1_1ChemicalEngine.xml  classxGEMS_1_1Interface.xml  dir_f087b5b50ae4e11c2d7165aff8e18a19.xml  index.xml  namespacexGEMS.xml  structxGEMS_1_1ChemicalEngineOptions.xml  structxGEMS_1_1ChemicalEngine_1_1Impl.xml
docs/html/: .buildinfo  .buildinfo.bak  api.html  api_reference.html  cpp_api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  python_api_reference.html  python_dicts_api_reference.html  search.html  searchindex.js
docs/html/.doctrees/: api.doctree  api_reference.doctree  cpp_api_reference.doctree  environment.pickle  index.doctree  python_api_reference.doctree  python_dicts_api_reference.doctree
docs/html/_modules/: index.html
docs/html/_sources/: api.rst.txt  api_reference.rst.txt  cpp_api_reference.rst.txt  index.rst.txt  python_api_reference.rst.txt  python_dicts_api_reference.rst.txt
docs/sphinx/source/: conf.py  index.rst
python/: CMakeLists.txt
python/PyxGEMS/: CMakeLists.txt  pydicGEMS.hpp  pyxGEMS.cpp  pyxGEMS.hpp  pyxdGEMS.hpp
python/pyGEMS/: CMakeLists.txt  __init__.py  pyGEMS.py  setup.py.in
python/xGEMS/: CMakeLists.txt  __init__.py  pyGEMS.py  setup.py.in
tests/: CMakeLists.txt  test1.py  test_systems.py
tests/gems3k/CASHNK1/: 1TCi+CH-dat.lst  1TCi+CH-dbr.lst  1TCi+CH-ipm.json
tests/gems3k/CASHNK1-T-json/: 1TCi+CH-dbr-0-0000.json  1TCi+CH-dch.json
tests/gems3k/CASHNK1-json/: 1TCi+CH-dbr-0-0000.json  1TCi+CH-dch.json
tests/gems3k/CASHNK1-keyvalue/: 1TCi+CH-dat.lst  1TCi+CH-dbr.lst
tests/gems3k/Kaolinite-T-funjson/: pHtitr-dbr-0-0000.json  pHtitr-dch.json  pHtitr-ipm.json
tests/gems3k/Kaolinite-funjson/: pHtitr-dat1.lst  pHtitr-dch.json  pHtitr-fun.json
tests/gems3k/Kaolinite-funkeyvalue/: pHtitr-dat1.lst  pHtitr-fun.json
xGEMS/: CMakeLists.txt  ChemicalEngine.cpp  ChemicalEngine.cxx  ChemicalEngine.hpp  ChemicalEngineMaps.cpp  ChemicalEngineMaps.hpp  Eigen.hpp  GEMSEngine.cpp  GEMSEngine.h  GEMSEngine.hpp  Gems.cpp  Gems.hpp  Index.hpp  Interface.hpp  xGEMS.cxx
xGEMS/GEMS3K/: CMakeLists.txt
